# Aegis_V3

./: .gitignore  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: security.yml  tenant-isolation.yml
Chaos_Route/: .dockerignore  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Caddyfile  Dockerfile  ETAT_ISOLATION.md  README.md  TODO_MATURITE_OPERATIONNELLE.md  deploy.sh  docker-compose.yml  migrate_to_pg.sh  setup-server.sh
Chaos_Route/backend/: alembic.ini  migrate_eqc.sql  requirements.txt  seed_crate_types.py  seed_pdv_users.py  seed_pdv_users_pg.py  seed_support_types.py
Chaos_Route/backend/alembic/: env.py
Chaos_Route/backend/app/: config.py  database.py  main.py  rate_limit.py
Chaos_Route/backend/scripts/: migrate_carriers.py  migrate_sqlite_to_pg.py  (+2 more)
Chaos_Route/docs/: CAHIER_TECHNIQUE.md  CHAOS_ROUTE_modele_financier.md  GLOSSARY.md  GUIDE_ENREGISTREMENT_TELEPHONE.md  OFFRE_COMMERCIALE_CHAOS_ROUTE.md  PLAN_REMEDIATION_STIME.md
Chaos_Route/frontend/: index.html  package-lock.json  package.json  vite.config.ts
Chaos_Route/mobile/: .easignore  app.json  eas.json  package-lock.json  package.json
Chaos_Route/seed_data/: bases.csv  contracts.csv  countries.csv  distances_bases.csv  regions.csv  volumes.csv
Chaos_Route/sms_gateway/: README.md  config.py  gateway.py
_AI_CONTEXT/: 00_PROJECT_STATUS.md  01_TECH_STACK.md  02_LOGIC_MAP.md
src/: App.tsx  Sidebar.tsx  WelcomeView.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+447 files in other folders)
