[package]
name = "aegis-v3"
version = "0.0.0"
description = "Aegis V3"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# --- SOCLE TAURI ---
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-store = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- UTILITAIRES SYSTÈME (MANQUANTS PRÉCÉDEMMENT) ---
walkdir = "2.3"  # Pour scanner les dossiers récursivement
open = "5.0"     # Pour ouvrir les fichiers avec l'OS

# --- CLIENT WEB (HTTPS) ---
# Configuration "Windows Safe" avec Rustls
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] } 
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
